// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      1
    </div>
    <h2
      class="euiTitle euiTitle--small euiStep__title"
    >
      first title
    </h2>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      2
    </div>
    <h2
      class="euiTitle euiTitle--small euiStep__title"
    >
      second title
    </h2>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Incomplete Step 
    </span>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
    />
    <h2
      class="euiTitle euiTitle--small euiStep__title"
    >
      third title
    </h2>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      1
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      first title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      2
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      second title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Incomplete Step 
    </span>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
    />
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      third title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      10
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      first title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 
    </span>
    <div
      class="euiStepNumber euiStep__circle"
    >
      11
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      second title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Incomplete Step 
    </span>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
    />
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      third title
    </p>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
